# weatherlink-data-logger

./: .gitignore  Cargo.toml  DESIGN.md  README.md  development_notes.md  env  package-lock.json  package.json  pyproject.toml  weatherlink.config.js  wl-start-stop.sh
config/: config.example.toml  config.toml  wlconfig.example.toml
docs/: dotenv  example_packet.json
js/: .app.js.swp  app.js  utils.js
pm2/: observable-notebook-connector.js  weatherlink-data-capture.js  weatherlink.config.js
rai-poetry-weatherlink/: pyproject.toml
rai-poetry-weatherlink/config/: wlconfig.example.toml
rai-poetry-weatherlink/src/: weatherlink.py
sql/: bar_sea_level.sql  create_tables.sql  dew_point.sql  hum.sql  hum_in.sql  solar_rad.sql  tables.sql  temp.sql  temp_in.sql  timestamps.sql  uv_index.sql  wind_dir_last.sql  wind_speed_last.sql
src/: aio-weatherlink.py  main.rs  structs.rs  weatherlink.py  weatherlink_utils.py
