[package]
name = "weatherlink-data-logger"
version = "0.0.1"
authors = ["jason a. grafft <j@grafft.co>"]
edition = "2018"

[dependencies]
dotenv = "*"
hyper = { version = "0.14", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
