[tool.poetry]
name = "weatherlink-data-logger-poetry"
version = "0.0.2"
description = ""
authors = ["jason a. grafft <jason@grafft.co>"]
license = "ISC"

[tool.poetry.dependencies]
python = "^3.9"
pytomlpp = "^1.0.11"
redis = "^4.5.3"
requests = "^2.28.0"
backoff = "^2.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
