[tool.poetry]
name = "rai-poetry-weatherlink"
version = "0.0.1"
description = ""
authors = ["jason a. grafft <jason@grafft.co>"]
license = "ISC"

[tool.poetry.dependencies]
python = "^3.10"
rai-sdk = "^0.6.3"
pytomlpp = "^1.0.11"
tinydb = "^4.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
